--- a/report/final_report_7.tex
+++ b/report/final_report_7.tex
@@ -63,7 +63,7 @@ Contract-based methodology emphasizes decomposing a complex problem into more ma
 
 % Introduce the background and motivation for doing this project.
 % What are the current progress in this respect.
-In recent years, increasing interest in the field of robotics and automaton has led researchers and practitioners alike to develop robotic systems that perform many complicated tasks $\cite{c1,c2}$. The control systems for these applications are usually designed using the state-of-art methods by groups of expert researchers. As the control systems become more complex, system design necessarily focuses more on having a decomposed design structure. The reasons for this are manifold. It can be hard for a single group of designers to design a controller that encompasses all aspects of the problem. More often, a large project requires collaboration of several teams in charge of different aspects and sub-problems. It is also useful to limit the influence of a mistake within a local controller, or even to have a correct-by-construction system. Other factors include the limitations of existing automatic control synthesis tools, including their vulnerability to combinatorial explosion and the limited types of dynamic models and formal specifications they support: this forces system designers to divide the problem to fit the applicable range of different tools. Some decomposed design structures that have been explored include layered design, component-based design, V-model design and model-based design$\cite{c3}$.
+In recent years, increasing interest in the field of robotics and automaton has led researchers and practitioners alike to develop robotic systems that perform many complicated tasks $\cite{c1,c2}$. The control systems for these applications are usually designed using the state-of-art methods by groups of expert researchers. As the control systems become more complex, system design necessarily focuses more on having a decomposed design structure. The reasons for this are manifold. It can be hard for a single group of designers to design a controller that encompasses all aspects of the problem. More often, a large project requires collaboration of several teams in charge of different aspects and sub-problems. It is also useful to limit the influence of a mistake within a local controller, or even to have a correct-by-construction system. Other factors include the limitations of existing automatic control synthesis tools, including their vulnerability to combinatorial explosion and the limited types of dynamic models and formal specifications they support: these force system designers to divide the problem to fit the applicable range of different tools. Some decomposed design structures that have been explored include layered design, component-based design, V-model design and model-based design$\cite{c3}$.
 
 In this paper, we propose contract-based design for autonomous robotic systems. Contract-based methodology can facilitate the design of complex and distributed cyber-physical systems by formally defining the interconnections between the components. It can potentially reduce the cost of re-design, thus shortening the development cycle, and promote re-use and optimization of functionalities.  Among the different interpretations of contracts, a comparatively recent and active one is that of contract theory based on assume-guarantee relationships. Contract-based design has been applied to various cyber-physical systems $\cite{c4}$, as well as in the design of aircraft electric power systems $\cite{c5}$. Combined with platform-based design $\cite{c6}$, which provides a design methodology for decomposing the system, contract-based design has attracted a lot of attention because of its successful application in many embedded system domains, including automotive $\cite{c14}$ and integrated circuit $\cite{c15}$ domains.  
 
@@ -138,7 +138,7 @@ The Temporal Logic Planning Toolbox (TuLiP) $\cite{c10}$ provides a collection o
 
 
 \subsection{Optimization-based Synthesis for Timed Specifications}
-Reactive synthesis for timed specifications can be solved as a series of optimization problems using a mixed integer linear encoding $\cite{c17}$. Timed logics can specify the absolute timing of events, including for example the duration for which a property needs to hold, or a time horizon within which an event must occur. The timed logic used in this work is Signal Temporal Logic (STL), and the control methodology is model predictive control (MPC), which observes the current plant at every timestep and computes the controller signal up to a horizon $\textit{H}$ $\cite{c17}$ such that the specifications are satisfied within every time interval.
+Reactive synthesis for timed specifications can be solved as a series of optimization problems using a mixed integer linear encoding $\cite{c17}$. Timed logics can specify the absolute timing of events, including for example the duration for which a property needs to hold, or a time horizon within which an event must occur. The timed logic used in this work is Signal Temporal Logic (STL), and the control methodology is model predictive control (MPC), which observes the current plant at every time step and computes the controller signal up to a horizon $\textit{H}$ $\cite{c17}$ such that the specifications are satisfied within every time interval.
 
 \paragraph*{Applicability}
 	 %STL specifications include initial condition such as $x(0)=x_0$, safety condition such as $\square_{[t_1, t_2]} (x(t)>x_1)$, progress condition such as $\square_{[t_1, t_2]} \lozenge_{[t_3, t_4]} (x(t)>x_1)$, and goal condition such as $\lozenge_{[t_1,t_2]}(x(t)>x_1)$. Since the synthesis is solving optimization problems, this method guarantees optimality of the solution. It is also suitable for solving real-time problems with timing constraints.
@@ -291,7 +291,7 @@ Here $C_d$ is the contract for the dispatcher, $C_p$ for the route planner and $
 
 \section{System Controller Design}
 %Describe how the controller are synthesized for example how are the specifications written in LTL/STL to satisfy the system requirements.
-With the system topology established, we synthesize controllers for each platforms. For each platform, we consider its contract and specify the desired behavior of the platform using temporal logic specifications.
+With the system topology established, we synthesize controllers for the platforms. For each platform, we consider its contract and specify the desired behavior of the platform using temporal logic specifications.
 
 \subsection{Dispatcher}
 The dispatcher considers the strategy of the taxi center, and therefore we use TuLiP to synthesize the controller. Using GR(1) specifications, we provide a refinement of the contract by specifying the environment variables, system variables, environment specifications and system specifications as follows:
@@ -428,25 +428,25 @@ We first specify that the taxi does not exceed an environment boundary, written 
 
 Then, we specify avoiding the static obstacles for safety requirement,
 
-\begin{align}
+\begin{align*}
 &\square_{[0, \text{Inf}]} \left( x(t) < x_{\text{min}}(t)  \vee x(t) > x_{\text{max}}(t)\vee \right. \\
 & \left. \qquad \qquad \qquad \qquad \qquad y(t) <y_{\text{min}}(t)  \vee y(t) > y_{\text{max}}(t)\right)
-\end{align}
+\end{align*}
 
 
 To satisfy the realizability requirement, when the target location is $location_i$ or $des$, we have
 
-\begin{align}
+\begin{align*}
 & \square_{[0, \text{Inf}]} \lozenge_{[0, t_0]} \left( x(t) > x_{\text{min}}(t) \wedge x(t) < x_{\text{max}}(t) \right.\\
 & \qquad \qquad \qquad \qquad \qquad\left. \wedge y(t) > y_{\text{min}}(t) \wedge y(t) < y_{\text{max}}(t)\right)
-\end{align}
+\end{align*}
 
 In the end, in order to avoid taxis crashing into each other, we use a buffer value $e$ that is slightly greater than the radius of the vehicle, and specify that 
 
-\begin{align}
+\begin{align*}
 & \square_{[0, \text{Inf}]} (close(t)>0.5 \Rightarrow x(t)<xpos(t)-e \vee x(t)> \\
 & xpos(t)+e \vee y(t)<ypos(t)-e \vee y(t)>ypos(t)+e)
-\end{align} 
+\end{align*} 
 
 \subsection{Communication Platform}
 After synthesizing controllers for all components, the controllers need to be connected. Since the contracts have specified the ports for different controllers, during implementation there are two major problems to be considered: which communication platform can host the communication between the components, and how to control the synchronous or asynchronous communication between the components.
@@ -454,13 +454,13 @@ After synthesizing controllers for all components, the controllers need to be co
 In our case, because the distributed taxi systems run concurrently, Robotic Operating System (ROS) $\cite{c12}$ can serve as the communication platform. We use ROS to integrate the controllers synthesized by different synthesis tools.
 TuLiP and BluSTL give different forms of controller output, and ROS interfaces for these two are rospy, which is the python API of ROS, and Matlab package Robotic System Toolbox $\cite{c13}$ that allows easy interface with ROS, respectively. 
 
-%ROS provides two ways of communication: publisher and subsriber, client and server. A publisher actively publishes messages, while a server passively responds upon request by the client. We use a combination of the two to allow asynchronous communication of the components. Every controller can be a ROS node of the final integrated system. Using publisher and subscriber, we can specify active input variables, meaning variables that trigger the controller state transition, to be different topics. Platforms whose contracts include these active input variables can subscribe to the corresponding topics. If new values are published as messages to one of those topics, the subscribed platforms will generate the new controller signal. Using client and server, we can record the values of the status variables, which indicate what state the system is in, in the server, and return the value when requested by the client. If a contract considers more than one variables to be environment input, for status variables, the platform can be the client to request their values whenever state transition occurs, for more than one active variables, if they are asynchronous, default values can be associated with them for when they are not triggering the state transition, or if synchronous, we can write a new node as a synchronizer for these variables.
+%ROS provides two ways of communication: publisher and subscriber, client and server. A publisher actively publishes messages, while a server passively responds upon request by the client. We use a combination of the two to allow asynchronous communication of the components. Every controller can be a ROS node of the final integrated system. Using publisher and subscriber, we can specify active input variables, meaning variables that trigger the controller state transition, to be different topics. Platforms whose contracts include these active input variables can subscribe to the corresponding topics. If new values are published as messages to one of those topics, the subscribed platforms will generate the new controller signal. Using client and server, we can record the values of the status variables, which indicate what state the system is in, in the server, and return the value when requested by the client. If a contract considers more than one variables to be environment input, for status variables, the platform can be the client to request their values whenever state transition occurs, for more than one active variables, if they are asynchronous, default values can be associated with them for when they are not triggering the state transition, or if synchronous, we can write a new node as a synchronizer for these variables.
 
 %In our problem, the dispatcher treats requests as active input and taxi availability as status variables. The route planner treats taxi assignment and ready as active input. The path navigation treats every change in target location as active input.
 
 \section{Example and Discussion}\label{sec:results}
 %Give a detailed implementation and show demonstration.
-We demonstrate the results of our control design methodology on a concrete problem instance. We specify that there are in total three different requests, two available taxis, and the maximum number of passengers in each taxi is two. The different locations are connected to the destination by a bridge. Figure 3 shows the visualization of the problem.
+We demonstrate the results of our control design methodology on a concrete problem instance. We specify that there are in total three different requests, two available taxis, and the maximum number of passengers in each taxi is two. The different locations are connected to the destination by a bridge. Figure 3 shows the visualization of the problem, which is the initial state of the taxi system.
 \begin{figure}[thpb]
 	\centering
 	%\framebox{\parbox{3in}{We suggest that you use a text box to insert a graphic (which is ideally a 300 dpi TIFF or EPS file, with all fonts embedded) because, in an document, this method is somewhat more stable than directly inserting a picture.
@@ -470,33 +470,33 @@ We demonstrate the results of our control design methodology on a concrete probl
 	\label{figurelabel}
 \end{figure}
 
-We run the simulation and give three requests at the same time to the system. Figure 4 shows an intermediate state when the first taxi has picked up two passengers from location 0 and 1, and is going to the bridge, and the second taxi is going from the bridge to the destination.
+We run the simulation and give three requests at the same time to the system. A video accompanying this paper demonstrates the run of this simulation. Figure 4 shows an intermediate state when the first taxi has picked up two passengers from location 1 and 2, and is going to the bridge, and the second taxi has picked up one passenger from location 0, and has just reached the bridge.
 \begin{figure}[thpb]
 	\centering
 	%\framebox{\parbox{3in}{We suggest that you use a text box to insert a graphic (which is ideally a 300 dpi TIFF or EPS file, with all fonts embedded) because, in an document, this method is somewhat more stable than directly inserting a picture.
 	%   		}}
-	\includegraphics[scale=0.37]{intermediate_3.jpg}
+	\includegraphics[scale=0.37]{intermediate_4.jpg}
 	\caption{Visualization of the intermediate state of the simulation}
 	\label{figurelabel}
 \end{figure}
 
 
-Figure 5 shows the end state of the simulation. The record of the location history of the taxis on the right column shows that the requests are satisfied. 
+Figure 5 shows the end state of the simulation. The record of the location history of the taxis on the right column shows that the requests are satisfied. In this solution, both taxis go to location 1 after finishing the requests.
 \begin{figure}[thpb]
 	\centering
 	%\framebox{\parbox{3in}{We suggest that you use a text box to insert a graphic (which is ideally a 300 dpi TIFF or EPS file, with all fonts embedded) because, in an document, this method is somewhat more stable than directly inserting a picture.
 	%   		}}
-	\includegraphics[scale=0.37]{result_2.jpg}
+	\includegraphics[scale=0.37]{result_3.jpg}
 	\caption{Visualization of the end state of the simulation}
 	\label{figurelabel}
 \end{figure}
 
-During simulation, the taxis successfully avoid the static obstacle. Figure 6 shows an intermediate state when the second taxi was going from the bridge to location 1. The taxi went downwards to stay outside the boundary of the obstacle.
+During simulation, the taxis successfully avoid the static obstacle. Figure 6 shows an intermediate state when the second taxi was going from location 0 to the bridge. The taxi stayed outside the boundary of the obstacle.
 \begin{figure}[thpb]
 	\centering
 	%\framebox{\parbox{3in}{We suggest that you use a text box to insert a graphic (which is ideally a 300 dpi TIFF or EPS file, with all fonts embedded) because, in an document, this method is somewhat more stable than directly inserting a picture.
 	%   		}}
-	\includegraphics[scale=0.37]{staticavoid.jpg}
+	\includegraphics[scale=0.37]{staticavoid_2.jpg}
 	\caption{Visualization of static obstacle avoidance}
 	\label{figurelabel}
 \end{figure}
@@ -552,23 +552,23 @@ Future work on exploring contract-based design includes developing contract synt
 
 
 \begin{thebibliography}{99}
-\bibitem{c1} T. Wongpiromsarn, U. Topcu and R. Murray, 'Receding Horizon Temporal Logic Planning', IEEE Transactions on Automatic Control, vol. 57, no. 11, pp. 2817-2830, 2012.
-\bibitem{c2} C. McGhan, R. Murray, R. Serra, M. Ingham, M. Ono, T. Estlin and B. Williams, 'A Risk-Aware Architecture for Resilient Spacecraft Operations', Aerospace Conference, 2015 IEEE, pp. 1-15, March 2015.
-\bibitem{c3} A. Benveniste, B. Caillaud, D. Nickovic, R. Passerone, J.-B. Raclet, P. Reinkemeier, A. Sangiovanni-Vincentelli, W. Damm, T. Henzinger, and K.G. Larsen. 'Contracts for System Design', Technical Report RR-8147, INRIA, November 2012.
-\bibitem{c4} A. Sangiovanni-Vincentelli, W. Damm and R. Passerone, 'Taming Dr. Frankenstein: Contract-Based Design for Cyber-Physical Systems*', European Journal of Control, vol. 18, no. 3, pp. 217-238, 2012.
-\bibitem{c5} P. Nuzzo, Huan Xu, N. Ozay, J. Finn, A. Sangiovanni-Vincentelli, R. Murray, A. Donze and S. Seshia, 'A Contract-Based Methodology for Aircraft Electric Power System Design', IEEE Access, vol. 2, pp. 1-25, 2014.
-\bibitem{c6} A. Sangiovanni-Vincentelli and G. Martin, 'Platform-based design and software design methodology for embedded systems, Design $\&$ Test of Computers, IEEE, vol.18, no.6, pp.23,33, Nov/Dec 2001.
-\bibitem{c14} W. Damm, 'Contract-based analysis of automotive and avionics applications: The
-SPEEDS approach', In: Cofer, D.D., et al. (eds.) FMICS. LNCS, vol. 5596, p. 3. Springer, 2008.
-\bibitem{c15} P. Nuzzo, A. Sangiovanni-Vincentelli, Xuening Sun and A. Puggelli, 'Methodology for the Design of Analog Integrated Interfaces Using Contracts', IEEE Sensors J., vol. 12, no. 12, pp. 3329-3345, 2012.
-\bibitem{c7} C. Baier and J. Katoen, Principles of model checking. Cambridge, Mass.: MIT Press, 2008.
-\bibitem{c8} V. Raman, M. Maasoumy, A. Donz´e, R. M. Murray, A. Sangiovanni-Vincentelli, and S. A. Seshia. Model predictive control with signal temporal logic specifications. In Proc. of the IEEE Conf. on Decision and Control, 2014.
-\bibitem{c17} V. Raman, A. Donz´e, D. Sadigh, R. M. Murray, and S. A. Seshia. 'Reactive synthesis from
-signal temporal logic specifications'. In Proceedings of the international conference on Hybrid
-Systems: Computation and Control, HSCC 2015, 2015.
-\bibitem{c9} R. Bloem, B. Jobstmann, N. Piterman, A. Pnueli and Y. Sa'ar, 'Synthesis of Reactive(1) designs', Journal of Computer and System Sciences, vol. 78, no. 3, pp. 911-938, 2012.
-\bibitem{c10} T. Wongpiromsarn, U. Topcu, N. Ozay, H. Xu, and R. M. Murray, 'TuLiP: a software toolbox for receding horizon temporal logic planning', International Conference on Hybrid Systems: Computation and Control, 2011.
-\bibitem{c11} A. Donze and V. Raman, 'BluSTL: Controller Synthesis from Signal Temporal Logic Specifications', 2nd International Workshop on Applied Verification for Continuous and Hybrid Systems (ARCH 2015), April, 2015.
+\bibitem{c1} T. Wongpiromsarn, U. Topcu and R. Murray. Receding horizon temporal logic planning. $\textit{IEEE Transactions on Automatic Control}$, vol. 57, no. 11, pp. 2817-2830, 2012.
+\bibitem{c2} C. McGhan, R. Murray, R. Serra, M. Ingham, M. Ono, T. Estlin and B. Williams. A risk-aware architecture for resilient spacecraft operations. $\textit{Aerospace Conference 2015 IEEE}$, pp. 1-15, March 2015.
+\bibitem{c3} A. Benveniste, B. Caillaud, D. Nickovic, R. Passerone, J.-B. Raclet, P. Reinkemeier, A. Sangiovanni-Vincentelli, W. Damm, T. Henzinger, and K.G. Larsen. Contracts for system design. French Institute for Research in Computer Science and Automation, Rocquencourt, France, Tech. Rep. RR-8147, November 2012.
+\bibitem{c4} A. Sangiovanni-Vincentelli, W. Damm and R. Passerone. Taming Dr. Frankenstein: contract-based design for cyber-physical systems. $\textit{European Journal of Control}$, vol. 18, no. 3, pp. 217-238, 2012.
+\bibitem{c5} P. Nuzzo, Huan Xu, N. Ozay, J. Finn, A. Sangiovanni-Vincentelli, R. Murray, A. Donze and S. Seshia. A contract-based methodology for aircraft electric power system design. $\textit{IEEE Access}$, vol. 2, pp. 1-25, 2014.
+\bibitem{c6} A. Sangiovanni-Vincentelli and G. Martin. Platform-based design and software design methodology for embedded systems. $\textit{Design \&}$ $\textit{Test of Computers, IEEE}$, vol.18, no.6, pp.23,33, Nov/Dec 2001.
+\bibitem{c14} W. Damm. Contract-based analysis of automotive and avionics applications: The
+SPEEDS approach. In $\textit{Formal Methods for}$ $\textit{Industrial Critical Systems}$, Heidelberg, Germany: Springer, 2008, vol. 5596, p. 3.
+\bibitem{c15} P. Nuzzo, A. Sangiovanni-Vincentelli, Xuening Sun and A. Puggelli. Methodology for the design of analog integrated interfaces using contracts. $\textit{IEEE Sensors J.}$, vol. 12, no. 12, pp. 3329-3345, 2012.
+\bibitem{c7} C. Baier and J. Katoen. $\textit{Principles of model checking}$. Cambridge, Mass.: MIT Press, 2008.
+\bibitem{c8} V. Raman, M. Maasoumy, A. Donz´e, R. M. Murray, A. Sangiovanni-Vincentelli, and S. A. Seshia. Model predictive control with signal temporal logic specifications. In $\textit{Proc. of the IEEE Conf. on Decision}$ $\textit{and Control}$, 2014.
+\bibitem{c9} R. Bloem, B. Jobstmann, N. Piterman, A. Pnueli and Y. Sa'ar. Synthesis of reactive(1) designs. $\textit{Journal of Computer and System}$ $\textit{Sciences}$, vol. 78, no. 3, pp. 911-938, 2012.
+\bibitem{c10} T. Wongpiromsarn, U. Topcu, N. Ozay, H. Xu, and R. M. Murray. TuLiP: a software toolbox for receding horizon temporal logic planning. $\textit{International Conference on Hybrid Systems: Computation and}$ $\textit{Control}$, 2011.
+\bibitem{c17} V. Raman, A. Donz´e, D. Sadigh, R. M. Murray, and S. A. Seshia. Reactive synthesis from
+signal temporal logic specifications. In $\textit{Proc. of the international conference on Hybrid
+Systems:}$ $\textit{Computation and Control, HSCC 2015}$, 2015.
+\bibitem{c11} A. Donze and V. Raman. BluSTL: controller synthesis from signal temporal logic specifications. $\textit{2nd International Workshop on Applied}$ $\textit{Verification for Continuous and Hybrid Systems}$, April, 2015.
 \bibitem{c12} Ros.org, `ROS.org | Powering the world's robots', 2015. [Online]. Available: http://www.ros.org/. [Accessed: 27- Jul- 2015].
 \bibitem{c13} Mathworks.com, 'Robotics System Toolbox - Simulink and MATLAB', 2015. [Online]. Available: http://www.mathworks.com/products/robotics/?refresh=true. [Accessed: 30- Aug- 2015].
 
